#134 fix layer z-index bug.

--- a/webapp/WEB-INF/static_resources/stylesheets/slipp.css
+++ b/webapp/WEB-INF/static_resources/stylesheets/slipp.css
@@ -402,6 +402,7 @@ body{overflow-y:scroll}
 .person-change-account-setting-submit{margin-top:1em}
 .person-change-pw-submit{margin-top:1em;background-color:#801a00;}
 .person-change-pw-submit:hover{background-color:#b32400}
+.smalltalk{position:relative;z-index:0}
 .smalltalk-form{position:relative;z-index:1;padding:10px;border:1px solid #dadada;-webkit-border-radius:4px 4px 0 0;border-radius:4px 4px 0 0;-webkit-box-shadow:0 0 4px rgba(0,0,0,0.2);box-shadow:0 0 4px rgba(0,0,0,0.2);background-color:#f5f5f5;text-align:right}
 .tf-smalltalk-form-msg{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:block;overflow:auto;width:100%;height:4.8em;padding:.4em;border:1px solid #ddd;line-height:1.2em;resize:vertical;}
 .tf-smalltalk-form-msg:focus{-webkit-box-shadow:none;box-shadow:none;border-color:#aaa}
