--- a/webapp/WEB-INF/static_resources/stylus/partials/smalltalk.styl
+++ b/webapp/WEB-INF/static_resources/stylus/partials/smalltalk.styl
@@ -1,6 +1,8 @@
 smalltalk-theme-color = #8FB4B9;
 
-// .smalltalks
+.smalltalk
+  position: relative;
+  z-index: 0;
 .smalltalk-form
 	position: relative;
 	z-index: 1;
